--- a/ShoppingCartApp/ShoppingCartApp/Views/Product/List.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Product/List.cshtml
@@ -1,21 +1,9 @@
-﻿@model ShoppingCartApp.ViewModels.ProductsListViewModel
+﻿@model ProductsListViewModel
 
 
-
-<h1>@Model.Products</h1>
+<h1>@Model.CurrentCategory</h1>
 
 @foreach (var product in Model.Products)
 {
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            @*<img src="@product.ImageThumbnailUrl" alt="">*@
-            <div class="caption">
-                <h3 class="pull-right">@product.Price.ToString("c")</h3>
-                <h3>
-                    <a>@product.Name</a>
-                </h3>
-                <p>@product.ShortDescription</p>
-            </div>
-        </div>
-    </div>
+    <partial name="_ProductCard" model="product" />
 }
