--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
@@ -25,17 +25,20 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Product" asp-action="List">Products</a></li>
+                        
+                        @await Component.InvokeAsync("CategoryMenu")
+                        @*<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>*@
+                        @await Component.InvokeAsync("ShoppingCartSummary")
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="row">
-            <div class="col-md-3">
+            @*<div class="col-md-3">
                 <p class="lead">
                     <img class="img-responsive" alt="Shopping Cart'" src="~/Images/shoppingcart.jpg" />
                 </p>
-            </div>
+            </div>*@
             <div class="col-md-9">
                 @RenderBody()
             </div>
