--- a/ShoppingCartApp/ShoppingCartApp/wwwroot/content/site.css
+++ b/ShoppingCartApp/ShoppingCartApp/wwwroot/content/site.css
@@ -5,9 +5,10 @@
  */
 
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    background-image: url('/images/pattern.png');
-    background-repeat: repeat;
+    /*padding-top: 70px;*/ /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    background-image: url('/images/s.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
