--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
@@ -29,21 +29,23 @@
                         @await Component.InvokeAsync("CategoryMenu")
                         <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                         @await Component.InvokeAsync("ShoppingCartSummary")
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
         </nav>
 
         <div class="row">
-            @*<div class="col-md-3">
+            <div class="col-md-3">
                 <p class="lead">
-                    <img class="img-responsive" alt="Shopping Cart'" src="~/Images/shoppingcart.jpg" />
+                    <img class="img-responsive" alt="Shopping Cart'" src="~/Images/shopping-cart.png" />
                 </p>
-            </div>*@
+            </div>
             <div class="col-md-9">
                 @RenderBody()
             </div>
         </div>
+        @RenderSection("Scripts", required: false)
     </div>
 </body>
 </html>
