--- a/ShoppingCartApp/ShoppingCartApp/Views/Product/Details.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Product/Details.cshtml
@@ -2,8 +2,8 @@
 
 <h2>@Model.Name</h2>
 
-<div class="img-thumbnail">
-    <img src=@Model.ImageUrl" alt="">
+<div class="thumbnail">
+    <img src='@Model.ImageUrl' class="img-responsive">
     <div class="caption-full">
         <h3 class="pull-right">@Model.Price</h3>
         <h3>
