--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                         <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                         @await Component.InvokeAsync("ShoppingCartSummary")
                         <partial name="_LoginPartial" />
+                        <li><a asp-controller="NewProduct" asp-action="Index">Add new product</a></li>
                     </ul>
                 </div>
             </div>
