AllProduct (controller+view)

--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                         @await Component.InvokeAsync("ShoppingCartSummary")
                         <partial name="_LoginPartial" />
                         <li><a asp-controller="NewProduct" asp-action="Index">Add new product</a></li>
+                        <li><a asp-controller="AllProduct" asp-action="Index">All Product List</a></li>
                     </ul>
                 </div>
             </div>
