extracted repository to separate project

--- a/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Index.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Product>
+﻿@*@model IEnumerable<Product>
 
 @{
     Layout = null;
@@ -37,4 +37,4 @@
         }
     </table>
 </body>
-</html>
+</html>*@
