--- a/ShoppingCartApp/ShoppingCartApp/Views/_ViewImports.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using ShoppingCartApp.Models
+﻿@using ShoppingCartApp.Repository.Entities
 @using ShoppingCartApp.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper ShoppingCartApp.TagHelpers.*, ShoppingCartApp
