--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
@@ -8,6 +8,7 @@
             <span id="cart-status">
                 @Model.ShoppingCart.ShoppingCartItems.Count
             </span>
-        </a>
+           <a asp-controller="ShoppingCart" asp-action="Index">Shopping Cart</a>
+    </a>
     </li>
 }
