--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -9,7 +9,7 @@
         {
             <li>
                 <a asp-controller="Product" asp-action="List"
-                   asp-route-category="@category.CategoryName">@category.CategoryName</a>
+                   asp-route-categoryId="@category.CategoryId">@category.CategoryName</a>
             </li>
         }
         <li class="divider"></li>
