--- a/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Index.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Index.cshtml
@@ -1,7 +1,20 @@
 ﻿@model IEnumerable<Product>
+@{
+    ViewData["Title"] = "Index";
+}
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+    <h4>All Product List</h4>
+		</div>
+        <div class="col-6 text-end">
+            <a asp-controller="NewProduct" asp-action="Index" class="btn btn-primary">
+               <i class="bi bi-plus-circle"></i> &nbsp; Add New Product
+			</a>
+		</div>
+	</div>
+    <br /><br />
 
-
-    <h4>Products</h4>
     <table class="table table-bordered table-striped">
         
             <tr>
