--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/_Layout.cshtml
@@ -26,11 +26,13 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                         <li class="nav-item">
+                         <a class="nav-link " asp-area="" asp-controller="AllProduct" asp-action="Index">Product List</a>
+                        </li>
                         @await Component.InvokeAsync("CategoryMenu")
                         <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                         @await Component.InvokeAsync("ShoppingCartSummary")
                         <partial name="_LoginPartial" />
-                        <li><a asp-controller="NewProduct" asp-action="Index">Add new product</a></li>
                     </ul>
                 </div>
             </div>
