--- a/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Edit.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Edit.cshtml
@@ -1,8 +1,12 @@
 ﻿@model NewProductViewModel
 
-<form asp-action="Create" method="post" class="form-horizontal" role="form">
-
+<form asp-action="Edit" method="post" class="form-horizontal" role="form">
+ 
     <div asp-validation-summary="All" class="text-danger"></div>
+            <input asp-for="ProductId" hidden />
+           @* <input asp-for="ImageUrl" hidden />*@
+        
+  
 
     <div class="form-group">
         <label asp-for="Name" class="col-md-2 control-label"></label>
@@ -20,6 +24,7 @@
             <span asp-validation-for="CategoryID" class="text-danger"></span>
         </div>
     </div>
+
 
         <div class="form-group">
             <label asp-for="ShortDescription" class="col-md-2 control-label"></label>
@@ -53,9 +58,12 @@
             </div>
         </div>
 
-               <button type="submit" class="btn btn-primary" style="width:150px">Add New Product</button>
+
+               <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
 		<a asp-controller="AllProduct" asp-action="Index" class="btn btn-secondary" style="width:150px">
 			Back to List
 		</a>
+
+
 </form>
 
