--- a/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Index.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/AllProduct/Index.cshtml
@@ -34,6 +34,18 @@
                     <td>@product.CategoryId</td>
                     <td>@product.ShortDescription</td>
                     <td>@product.Price</td>
-                </tr>
+                           
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="AllProduct" asp-action="Edit" asp-route-productId="@product.ProductId"
+                            class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
+                             <a asp-controller="AllProduct" asp-action="Delete" asp-route-productId="@product.ProductId"
+                        class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
+
+					    </div>
+			        </td>
+                </tr> 
             }
+ 
     </table>
+</div>
