--- a/ShoppingCartApp/ShoppingCartApp/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
+++ b/ShoppingCartApp/ShoppingCartApp/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
@@ -1,14 +1,11 @@
 ﻿@model ShoppingCartViewModel
 
-@if (Model.ShoppingCart.ShoppingCartItems.Count > 0)
+@if (Model.ShoppingCart.ShoppingCartItems.Count >= 0)
 {
     <li>
-        <a>
-            <span class="glyphicon glyphicon-shopping-cart"></span>
+           <a asp-controller="ShoppingCart" asp-action="Index"><span class="glyphicon glyphicon-shopping-cart"></span>
             <span id="cart-status">
                 @Model.ShoppingCart.ShoppingCartItems.Count
-            </span>
-           <a asp-controller="ShoppingCart" asp-action="Index">Shopping Cart</a>
-    </a>
+            </span></a>
     </li>
 }
